introduction-to-kubernetes/templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  rules:
  - host: example-app.external-domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: example-app
          servicePort: 80
